# fode

./: .gitignore  README.md  SUGGESTIONS.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  parser.rs
ui/: index.html  main.js  style.css
