[package]
name = "fode"
version = "0.1.0"
edition = "2021"
description = "Entity-based code editor"

[lib]
name = "fode_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "fode"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-agent-control = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.24"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tokio = { version = "1", features = ["rt"] }
walkdir = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
